--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "laColonia",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
+  "version": "1.0.0",
+  "author": "Rodrigo Mantica",
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
@@ -35,5 +35,5 @@
     "@ionic/cli-plugin-ionic-angular": "1.3.1",
     "typescript": "2.3.3"
   },
-  "description": "An Ionic project"
+  "description": "El supermercado de Nicaragua en la nube."
 }
